--- a/index.html
+++ b/index.html
@@ -10,107 +10,101 @@
 </head>
 <body>
 <header>
-
+            <!-- Navbar Menu Section  -->
 <section class="nav-menu-section">
-    <nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg ">
     <div class="container menu navbar-light py-2">
-
         <a class="navbar-brand" href="#">
         <img src="images/logo.png" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Product</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link ">Contact Us</a>
-        </li>
-    </ul>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Product</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link ">Contact Us</a>
+            </li>
+        </ul>
     </div>
-</div>
+    </div>
 </nav>
 </section>
-        
+                 <!-- Banner Section  -->
 <section class="container mt-5">
 <div class=" banner-section">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-
-<div class="carousel-inner"> 
-    <div class="carousel-item p-3 active">
-        <div class="row d-flex align-items-center">
-            <div class="col col-md-7 col-lg-7">
-                <h1 class="fw-bold">Cool Dude Headphone</h1>
-                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                <h2 class="price-tag">$599</h2>
-                <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
+        <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+     <div class="carousel-inner"> 
+        <div class="carousel-item p-3 active">
+            <div class="row d-flex align-items-center">
+                <div class="col col-md-7 col-lg-7">
+                    <h1 class="fw-bold">Cool Dude Headphone</h1>
+                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                    <h2 class="price-tag">$599</h2>
+                    <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
+                </div>
+                <div class="col col-md-5 col-lg-5">
+                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                </div>
             </div>
-            <div class="col col-md-5 col-lg-5">
-                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item p-3">
+            <div class="row d-flex align-items-center">
+                <div class="col col-md-7 col-lg-7">
+                    <h1 class="fw-bold">Mega LCD TV For Sports</h1>
+                    <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                    <h2 class="price-tag">$599</h2>
+                    <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
+                </div>
+                <div class="col col-md-5 col-lg-5">
+                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item p-3">
+            <div class="row d-flex align-items-center">
+                <div class="col col-md-7 col-lg-7">
+                    <h1 class="fw-bold">X-Box for your living room</h1>
+                    <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                    <h2 class="price-tag">$599</h2>
+                    <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
+                </div>
+                <div class="col col-md-5 col-lg-5">
+                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                </div>
             </div>
         </div>
     </div>
-    <div class="carousel-item p-3">
-        <div class="row d-flex align-items-center">
-            <div class="col col-md-7 col-lg-7">
-                <h1 class="fw-bold">Mega LCD TV For Sports</h1>
-                <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                <h2 class="price-tag">$599</h2>
-                <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
-            </div>
-            <div class="col col-md-5 col-lg-5">
-                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-            </div>
-        </div>
-    </div>
-    <div class="carousel-item p-3">
-        <div class="row d-flex align-items-center">
-            <div class="col col-md-7 col-lg-7">
-                <h1 class="fw-bold">X-Box for your living room</h1>
-                <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
-                <h2 class="price-tag">$599</h2>
-                <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
-            </div>
-            <div class="col col-md-5 col-lg-5">
-                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-            </div>
-        </div>
-    </div>
-</div>
-
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
 </div>
 </div>
 </section>
+
 </header>
 
 <main>
-
-
-
+                 <!-- Categories Section  -->
 <section class=" container my-5">
     <div class="categories">
         <div class="row g-3">
@@ -135,10 +129,7 @@
         </div>
     </div>
 </section>
-
-
-
-
+                <!-- Shoe Section  -->
 <section class="container shoe">
     <h3>Shoes</h3>
     <div class="row g-3">
@@ -177,6 +168,7 @@
         </div>
     </div>
 </section>
+                <!-- Backpack Section  -->
 <section class="container my-5 backpack">
     <h3>Backpack</h3>
     <div class="row g-3">
@@ -216,13 +208,7 @@
     </div>
 </section>
 
-
 </main>
-
-
-
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
