--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="card-body">
                 <h4 class="card-title">Supply 350</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$340.87</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="card-body">
                 <h4 class="card-title">Nike 360</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$199.66</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
@@ -161,14 +161,16 @@
             <div class="card-body">
                 <h4 class="card-title">Red Airmax</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$239.34</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
         </div>
     </div>
 </section>
-                <!-- Backpack Section  -->
+                <!--===================
+                    Backpack Section
+                ===================  -->
 <section class="container my-5 backpack">
     <h3>Backpack</h3>
     <div class="row g-3">
@@ -176,9 +178,10 @@
             <div class="card">
             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Supply 350</h4>
+                <h4 class="card-title">Red Laltu Bag
+                </h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$99.99</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
@@ -187,9 +190,10 @@
             <div class="card">
             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Nike 360</h4>
+                <h4 class="card-title">Blue Niltu Bag
+                </h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$210.45</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
@@ -198,9 +202,10 @@
             <div class="card">
             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Red Airmax</h4>
+                <h4 class="card-title">Black Kaltu Bag
+                </h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                <h4>$340</h4>
+                <h4>$140.21</h4>
                 <a href="" class="btn buy-now-btn">Buy Now 	&rarr;</a>
             </div>
             </div>
@@ -208,7 +213,22 @@
     </div>
 </section>
 
+<section class="container my-5 py-5 banner-section">
+    <div class="d-flex justify-content-center text-center">
+    <div>
+    <h1>LET'S STAY IN TOUCH</h1>
+    <h5>Get updates on sales, specials and more
+    </h5>
+    <input class="form-control " type="text">
+    <button class="btn buy-now-btn">Submit</button>
+    </div>
+    </div>
+</section>
 </main>
+
+<footer class="text-center">
+    <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
