--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
 </section>
 
-<section class="container my-5 py-5 banner-section">
+<section class="container my-5 py-5 bg-color">
     <div class="d-flex justify-content-center text-center">
     <div>
     <h1>LET'S STAY IN TOUCH</h1>
