--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <header>
-            <!-- Navbar Menu Section  -->
+            <!--=====================================
+                      Navbar Menu Section  
+            ======================================-->
 <section class="nav-menu-section">
 <nav class="navbar navbar-expand-lg ">
     <div class="container menu navbar-light py-2">
@@ -39,7 +41,9 @@
     </div>
 </nav>
 </section>
-                 <!-- Banner Section  -->
+                 <!-- ==========================
+                         Banner Section  
+                 ============================-->
 <section class="container mt-5">
 <div class=" banner-section">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +108,9 @@
 </header>
 
 <main>
-                 <!-- Categories Section  -->
+                 <!--==============================
+                         Categories Section  
+                =================================-->
 <section class=" container my-5">
     <div class="categories">
         <div class="row g-3">
@@ -129,7 +135,9 @@
         </div>
     </div>
 </section>
-                <!-- Shoe Section  -->
+            <!--===========================
+                         Shoe Section 
+             ===============================  -->
 <section class="container shoe">
     <h3>Shoes</h3>
     <div class="row g-3">
@@ -168,9 +176,9 @@
         </div>
     </div>
 </section>
-                <!--===================
-                    Backpack Section
-                ===================  -->
+                <!--===========================
+                        Backpack Section
+                ===============================  -->
 <section class="container my-5 backpack">
     <h3>Backpack</h3>
     <div class="row g-3">
@@ -212,7 +220,9 @@
         </div>
     </div>
 </section>
-
+                <!--====================================
+                            Subscribe Section
+                ===================================  -->
 <section class="container my-5 py-5 bg-color">
     <div class="d-flex justify-content-center text-center">
     <div>
@@ -225,7 +235,9 @@
     </div>
 </section>
 </main>
-
+                <!--====================================
+                            Footer Section
+                ===================================  -->
 <footer class="text-center">
     <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
 </footer>
