--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
+            <a class="nav-link" href="#watch">Watch</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#shoe">Shoes</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link ">Contact Us</a>
+            <a class="nav-link" href="#bag">Bag</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link " href="#subscribe">Subscribe Us</a>
             </li>
         </ul>
     </div>
@@ -115,7 +118,7 @@
     <div class="categories">
         <div class="row g-3">
             <div class="col-lg-4 col-md-4">
-                <div class="d-flex justify-content-around align-items-center watch">
+                <div  class="d-flex justify-content-around align-items-center watch">
                     <h1>Watch</h1>
                     <img src="images/categories/watch.png" alt="">
                 </div>
@@ -123,13 +126,13 @@
             <div class="col-lg-4 col-md-4 ">
                 <div class="d-flex justify-content-around align-items-center bag">
                     <h1>Bag</h1>
-                    <img src="images/categories/bag.png" alt="">
+                    <a href="#bag"><img src="images/categories/bag.png" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="d-flex justify-content-around align-items-center shoes">
                     <h1>Shoes</h1>
-                    <img src="images/categories/shoes.png" alt="">
+                    <a href="#shoe"><img src="images/categories/shoes.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -138,7 +141,7 @@
             <!--===========================
                          Shoe Section 
              ===============================  -->
-<section class="container shoe">
+<section id="shoe" class="container shoe">
     <h3>Shoes</h3>
     <div class="row g-3">
         <div class="col-md-4">
@@ -179,7 +182,7 @@
                 <!--===========================
                         Backpack Section
                 ===============================  -->
-<section class="container my-5 backpack">
+<section id="bag" class="container my-5 backpack">
     <h3>Backpack</h3>
     <div class="row g-3">
         <div class="col-md-4">
@@ -223,7 +226,7 @@
                 <!--====================================
                             Subscribe Section
                 ===================================  -->
-<section class="container my-5 py-5 bg-color">
+<section id="subscribe" class="container my-5 py-5 bg-color">
     <div class="d-flex justify-content-center text-center">
     <div>
     <h1>LET'S STAY IN TOUCH</h1>
